--- a/src/Components/FlashCard.css
+++ b/src/Components/FlashCard.css
@@ -14,7 +14,7 @@
     cursor: pointer;
     font-family: Arial, Sans-Serif;
     width: 400px;
-    height: 500px;
+    height: 87.5vh;
     display: inline-block;
     margin: 10px;
     background-color: black;
@@ -62,24 +62,47 @@
     background-image: url("../resources/card-front.jpg");
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .front h2 {
+    font-size: 2.7rem;
+    text-decoration: underline;
+    text-align: center;
   }
 
 
   .card .back {
-    font-size: 18px;
+    font-size: 1.1rem;
     line-height: 1.4em;
     background-color: black;
     background-size: cover;
     color: #4D4A8A;
-    background-image: url("../resources/card-back-2.jpg");
+    background-image: url("../resources/card-back-3.jpg");
     width: 100%;
     height: 100%;
     position: absolute;
     top:0;
     left: 0;
   }
-  li li {
+  ul {
+    margin-left: -5%;
+  }
+  ul.main > li{
     list-style: none;
+    margin: 4% 0%;
+
+  }
+  strong {
+    color: black;
+  }
+  li.no-style {
+    list-style-type: lower-greek;
+  }
+  li li {
+    list-style-type: lower-greek;
   }
 
   .card .back img {
@@ -115,15 +138,24 @@
 
 /* Desktop Screen Sizes */
 
-@media only screen and (min-width: 1024px) {}
+@media only screen and (min-width: 1024px) {
+  .card {
+    width: 50vw;
+    height: 87.5vh;
+    font-size: 5rem;
+  }
+  .card .back {
+    font-size: 1.3rem;
+  }
+  ul {
+    margin-left: -3%;
+  }
+}
 
 
 /* Large Screen sizes */
 
 @media only screen and (min-width: 1440px) {
-  .card {
-    width: 50vw;
-    height: 92vh;
-  }
+  
 }
 
