--- a/src/Components/FlashCard.css
+++ b/src/Components/FlashCard.css
@@ -6,15 +6,14 @@
     text-align: left;
     position: relative;
     transform-style: preserve-3d;
-    transition: transform 0.5s;
+    transition: transform 0.3s;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
     cursor: pointer;
     font-family: Arial, Sans-Serif;
-    width: 400px;
-    height: 87.5vh;
+    height: 75vh;
     display: inline-block;
     margin: 10px;
     background-color: black;
@@ -24,19 +23,19 @@
   }
 
   .card {
-    width: 350px;
-    height: 550px;
+    width: 97.5%;
+    /* height: 550px; */
   }
 
-  .card-container {
+  /* .card-container {
     display: flex;
     flex-flow: column nowrap;
-    height: 100%;
-  }
+    height: 60%;
+  } */
 
   .card.flip {
     transform: rotateY(180deg);
-    transition: transform 0.5s;
+    transition: transform 0.2s;
   }
 
   .card .face {
@@ -68,14 +67,14 @@
   }
 
   .front h2 {
-    font-size: 2.7rem;
+    font-size: 4.7rem;
     text-decoration: underline;
     text-align: center;
   }
 
 
   .card .back {
-    font-size: 1rem;
+    font-size: 2rem;
     line-height: 1.4em;
     background-color: black;
     background-size: cover;
@@ -85,10 +84,12 @@
     height: 100%;
     position: absolute;
     top:0;
+    overflow: auto;
     left: 0;
   }
   ul {
-    margin-left: -5%;
+    margin-left: 0;
+    font-size: 2rem;
   }
   ul.main > li{
     list-style: none;
@@ -99,10 +100,10 @@
     color: black;
   }
   li.no-style {
-    list-style-type: lower-greek;
+    list-style-type: upper-roman;
   }
   li li {
-    list-style-type: lower-greek;
+    list-style-type: upper-roman;
   }
 
   .card .back img {
@@ -140,15 +141,12 @@
 
 @media only screen and (min-width: 1024px) {
   .card {
-    width: 50vw;
+    width: 98%;
     height: 87.5vh;
-    font-size: 5rem;
+    font-size: 2rem;
   }
   .card .back {
-    font-size: 1.3rem;
-  }
-  ul {
-    margin-left: -3%;
+    font-size: 1.5rem;
   }
 }
 
